60183-fix adjust modal styles for images so smaller images aren't being squeezed into non-existence by too much padding

--- a/app/assets/stylesheets/fae/modules/_modal.scss
+++ b/app/assets/stylesheets/fae/modules/_modal.scss
@@ -22,7 +22,6 @@
   position: relative;
   background: $c-modal-bg;
   color: $c-darker-grey;
-  padding: 20px;
   line-height: 1.5;
   font-size: 13px;
   box-shadow: 0 3px 8px 0 $c-box-shadow;
@@ -56,16 +55,20 @@
   img {
     max-width: 100%;
     max-height: 100%;
+    margin: auto;
+    display: block;
   }
 }
 
 .simplemodal-close {
+  display: block;
+  height: 30px;
   &:before {
     @include icon-stuff;
     @extend .icon-delete_x:before;
     position: absolute;
-    top: 20px;
-    right: 20px;
+    top: 10px;
+    right: 10px;
     color: $c-white;
     cursor: pointer;
     font-size: 12px;
